# ggen

./: .cursorrules  .dockerignore  .env.example  .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  .rgenrc.yaml  .rust-analyzer.toml  .tmp_add_wasm4pm_tests.py  .tmp_proof_manifest.toml  .tmp_rewrite_tests.py  .tool-versions  .wip_current_path  .wip_next  2028_FEATURES_SUMMARY.md  80_20_COMBINATORIAL_FEATURES.md  ACADEMIC_PAPER_SYSTEM_INDEX.md  ADVERSARIAL_VALIDATION_SUMMARY.md  AFFILIATE_ROUTING_DELIVERY.md  AGENT-5-SUMMARY.md  AGENTS.md  AGENT_INTEGRATION_EXECUTIVE_SUMMARY.md  AGENT_INTEGRATION_INDEX.md  AGENT_SCHEMA_ARCHITECTURE.md  AGENT_TOOLING_IMPLEMENTATION_ROADMAP.md  AI_GAPS_IMPLEMENTATION_SUMMARY.md  AI_GENERATORS_GRANITE4_TEST_REPORT.md  ANDON_SIGNAL_AUDIT.md  APPLY_IMPLEMENTATION_REPORT.md  ARCHITECTURE_ANALYSIS_TPS.md  ARCHITECTURE_DIAGRAMS.md  ARMSTRONG_QUICK_REFERENCE.md  ARMSTRONG_TEST_INDEX.md  ARXIV_THESIS_NERVOUS_SYSTEM.md  ASSERTION_SYSTEM_SUMMARY.md  ATOMIC_FILE_OPERATIONS_TEST_RECEIPT.md  ATOMIC_OPERATIONS_VERIFICATION_RECEIPT.md  ATOMIC_OPS_TEST_EVIDENCE.md  ATOMIC_OPS_TEST_SUMMARY.md  (+581 more)
.archive/examples-advanced-ai-usage-backup/: .env.example  Cargo.toml
.archive/examples-advanced-cache-registry-backup/: Cargo.toml
.archive/examples-advanced-fullstack-integration-backup/: Cargo.toml
.archive/examples-advanced-rust-api-8020-backup/: Cargo.toml
.archive/examples-cli-advanced-backup/: Cargo.toml
.archive/examples-frontmatter-cli-backup/: Cargo.toml  README.md  user-auth-frontmatter.yaml
.archive/examples-knowledge-graph-builder-backup/: Cargo.toml
.archive/examples-lifecycle-complete-backup/: Cargo.toml  make.toml
.archive/examples-natural-market-search-backup/: Cargo.toml  README.md
.archive/examples-p2p-marketplace-backup/: Cargo.toml  README.md
.archive/examples-rust-monorepo-backup/: Cargo.toml
.archive/examples-sparql-engine-backup/: Cargo.toml
.archive/ggen-cleanroom-backup/: Cargo.toml  README.md
agents/: Cargo.toml  README.md
agents/src/: coordination.rs  core.rs  lib.rs  main.rs  protocols.rs  swarm.rs
boilerplate/: ARCHITECTURE.md  Cargo.toml  Dockerfile  deny.toml  docker-compose.yml
boilerplate/.cargo/: config.toml
boilerplate/.git-hooks/: commit-msg  pre-commit  pre-push
boilerplate/.github/: labeler.yml
boilerplate/scripts/: install-dev-tools.sh  install-hooks.sh
boilerplate/src/: Cargo.toml
cleanroom/: .cursorrules  CONTRIBUTING.md  Cargo.toml  README.md  test_cucumber.rs  test_panic.rs
cleanroom/bdd/: Cargo.toml
cleanroom/benches/: config_creation.rs  container_lifecycle.rs  scenario_execution.rs
cleanroom/docs/: ARCHITECT_VALIDATION_REPORT.md  ASYNC_SAFETY_VALIDATION.md  BACKENDS.md  CLI_ARCHITECTURE.md  CLI_COMMAND_TREE.md  CLI_DELIVERABLES.md  CLI_IMPLEMENTATION_STATUS.md  CLI_SUMMARY.md  CLNRM_README_VALIDATION_DELTA.md  CODE_QUALITY_VALIDATION.md  COVERAGE.md  DESIGN.md  DETERMINISM.md  DOCKER_INTEGRATION_TEST_REPORT.md  DOCKER_USAGE_ANALYSIS.md  DOCKER_VALIDATION_BEST_PRACTICES.md  DOCKER_VALIDATION_RESULTS.md  DOCKER_VALIDATION_SUMMARY.md  ERROR_HANDLING_SUMMARY.md  ERROR_HANDLING_VALIDATION.md  FALSE_POSITIVE_PREVENTION_CHECKLIST.md  FIXTURES.md  FORENSICS.md  GGEN_V1_READINESS_SUMMARY.md  HIVE_MIND_FINAL_REPORT.md  HIVE_MIND_VALIDATION_FINAL_REPORT.md  MOCK_DETECTION_ACTION_ITEMS.md  MOCK_DETECTION_SUMMARY.md  MOCK_VS_REAL_ANALYSIS.md  NEGATIVE_TEST_REPORT.md  OVERVIEW.md  PRODUCTION_CHECKLIST.md  PRODUCTION_READINESS_REPORT.md  PRODUCTION_READINESS_SUMMARY.md  PRODUCTION_READINESS_VALIDATION.md  PRODUCTION_VALIDATION_FINAL_REPORT.md  QUICK_STATUS.txt  README.md  RESOURCE_CLEANUP_VALIDATION.md  SECURITY.md  (+32 more)
cleanroom/examples/: README.md  README_CLI.md  async_patterns.rs  backend_extensions.rs  basic_usage.rs  builder_patterns.rs  cli_bash.sh  cli_nodejs.js  cli_python.py  concurrent_execution.rs  full_demo.rs  full_demo.sh  guard_patterns.rs  help.rs  id_management.rs  lifecycle_demo.rs  observability_setup.rs  poc_cleanroom.rs  poc_ggen_cli.rs  quick_demo.sh  quick_reference.sh  service.rs  simple_ggen_test.rs  simple_usage.rs  streaming_artifacts.rs  swarm_cli_usage.sh  test_cli.rs  validate_crate.sh
cleanroom/src/: artifacts.rs  artifacts_fixed.rs  assertions.rs  attest.rs  builder.rs  cleanroom.rs  cleanroom_fixed.rs  config.rs  config_fixed.rs  container_base.rs  containers.rs  containers_fixed.rs  coverage.rs  coverage_fixed.rs  determinism.rs  determinism_fixed.rs  error.rs  error_fixed.rs  error_helpers.rs  executor.rs  guards.rs  ids.rs  lib.rs  lib_fixed.rs  limits.rs  limits_fixed.rs  macros.rs  metrics_builder.rs  observability.rs  orchestrator.rs  policy.rs  policy_fixed.rs  prelude.rs  prelude_fixed.rs  redaction.rs  report.rs  report_fixed.rs  scenario.rs  serializable_instant.rs  services_fixed.rs  (+8 more)
cleanroom/tests/: bdd_simple.rs  bdd_standalone.rs  bdd_tests.rs  cli_test.rs  common.rs  cucumber_test.rs  file_persistence_test.rs  integration_tests.rs  lib.rs  lifecycle_test.rs  minimal_file_test.rs  mod.rs  negative_test_false_positives.rs  property_tests.rs  simple_file_test.rs  simple_testcontainer_test.rs  test_lib.rs  testcontainer_e2e_test.rs  unit_tests.rs  validator_test.rs
cli/: Cargo.toml  README.md
cli/benches/: marketplace_benchmark.rs
cli/src/: lib.rs  prelude.rs  runtime.rs
cli/tests/: AGENT_9_DELIVERABLE.md  cleanroom_marketplace_production_test.rs  cleanroom_production.rs  cli_subcommand.rs  integration.rs  performance.rs  (+11 more)
controller/: Cargo.toml  Containerfile  README.md
core/: Cargo.toml
domain/: Cargo.toml
ggen-ai/: Cargo.toml  README.md
ggen-marketplace/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
ggen-mcp/: CODE_REVIEW.md  Cargo.toml  README.md  REVIEW_ISSUES.md  SWARM_OPTIMIZATION.md  bulk_fixes.sh  fix_chrono_imports.py
minimal-mcp-server/: Cargo.toml  README.md
node/: Cargo.toml  README.md  index.d.ts
ollama-mcp/: Cargo.toml
playground/: Cargo.toml  INTEGRATION.md  MARKETPLACE.md  PRODUCTION_SCENARIO.md  README.md  SUMMARY.md  USAGE_EXAMPLE.md  ggen.toml  thesis-ontology.ttl
utils/: Cargo.toml  README.md
(+22567 files in other folders)
