[package]
name = "ggen"
version = "6.0.1"
authors = ["Sean Chatman <sean@chatmangpt.com>"]
edition = "2021"
repository = "https://github.com/seanchatmangpt/ggen"
readme = "README.md"
license = "MIT"
keywords = ["cli", "code-generation", "rdf", "templates"]
homepage = "https://github.com/seanchatmangpt/ggen"
categories = ["development-tools", "command-line-utilities"]
description = """
ggen is a deterministic, language-agnostic code generation framework that treats software artifacts as projections of knowledge graphs.
"""

[workspace]
members = [
  # Core Pipeline (mu1-mu5)
  "crates/ggen-utils",
  "crates/ggen-cli",
  "crates/ggen-domain",
  "crates/ggen-core",
  "crates/ggen-ai",
  "crates/ggen-dspy",
  "crates/ggen-config",
  "crates/ggen-cli-validation",
  "crates/ggen-config-clap",
  "crates/ggen-test-audit",
  "crates/ggen-test-opt",
  "crates/ggen-testing",
  "crates/ggen-e2e",
  "crates/ggen-node",
  "crates/ggen-macros",
  # Ontology / RDF
  "crates/ggen-ontology-core",
  "crates/ggen-canonical",
  "crates/ggen-receipt",
  "crates/ggen-prompt-mfg",
  "crates/ggen-codegen",
  "crates/ggen-yawl",
  "crates/ggen-craftplan",
  "crates/ggen-process-mining",
  # A2A / MCP Protocol
  "crates/a2a-generated",
  "crates/ggen-a2a",
  "crates/ggen-a2a-mcp",
  "crates/ggen-a2a-registry",
  "crates/ggen-transport",
]
exclude = [
  "examples/rust-cli-lifecycle",
  "examples/a2a-agent-lifecycle",
  "examples/distributed-consensus",
  "examples/e2e-complete-system",
  "examples/marketplace-demo/generated",
  "examples/gcp-erlang-autonomics",
  "examples/api-endpoint",
  "examples/advanced-lifecycle-demo",
  "marketplace/packages/workflow-engine-cli",
  "examples/a2a-groq-agent",
  "examples/a2a-rs-agents",
  # Migrated crates (now separate projects)
  "crates/ggen-workflow",
  "crates/ggen-workflow/native",
]
resolver = "2" # Use new resolver for better dependency resolution

# Workspace-wide dependencies for version consistency
[workspace.dependencies]
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "json",
  "ansi",
] }
clap = { version = "4.5", features = ["derive"] }
clap-noun-verb = "5.0.0"
clap-noun-verb-macros = "5.0.0"
once_cell = "1.19"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
tempfile = "3.23"
futures = "0.3"
futures-util = "0.3"
uuid = { version = "1.18", features = ["v4", "serde"] }
tera = "1.20"
oxigraph = { version = "0.5.6", features = ["rdf-12"] }
toml = "0.9"
serde_yaml = "0.9"
hex = "0.4"
sha2 = "0.10"

rayon = "1.11"
regex = "1.12"
log = "0.4"
notify = "7.0"
testcontainers = "0.25"
testcontainers-modules = "0.13"
notify-debouncer-full = "0.4"
assert_cmd = "2.0"
predicates = "3.1"
rig-core = "0.15.1"

# Workspace-local crates (use workspace = true pattern in workspace members)
# NOTE: v0.2.0 unified release
ggen-utils = { path = "crates/ggen-utils", version = "0.2.0" }
ggen-core = { path = "crates/ggen-core", version = "0.2.0" }
ggen-config = { path = "crates/ggen-config", version = "0.2.0" }
ggen-cli-validation = { path = "crates/ggen-cli-validation", version = "0.2.0" }
ggen-config-clap = { path = "crates/ggen-config-clap", version = "0.2.0" }
ggen-domain = { path = "crates/ggen-domain", version = "0.2.0" }
ggen-cli-lib = { path = "crates/ggen-cli", version = "0.2.0" }
ggen-node = { path = "crates/ggen-node", version = "0.2.0" }
ggen-macros = { path = "crates/ggen-macros", version = "0.2.0" }
ggen-test-audit = { path = "crates/ggen-test-audit", version = "0.2.0" }
ggen-test-opt = { path = "crates/ggen-test-opt", version = "0.2.0" }
ggen-testing = { path = "crates/ggen-testing", version = "0.2.0" }
ggen-e2e = { path = "crates/ggen-e2e", version = "0.2.0" }
ggen-ai = { path = "crates/ggen-ai", version = "0.2.0" }
ggen-ontology-core = { path = "crates/ggen-ontology-core", version = "0.2.0" }
ggen-canonical = { path = "crates/ggen-canonical", version = "0.2.0" }
ggen-receipt = { path = "crates/ggen-receipt", version = "0.2.0" }
ggen-a2a = { path = "crates/ggen-a2a", version = "6.0.1" }
ggen-prompt-mfg = { path = "crates/ggen-prompt-mfg", version = "0.2.0" }

# KNHK Systems (ETL + KGC-4D + Workflow Engine Integration)
# A2A Protocol Integration (Agent-to-Agent protocol) - using local a2a-generated
# The vendor a2a-rs is for reference only - we use our generated types
a2a-generated = { path = "crates/a2a-generated", version = "0.1.0" }

# A2A-MCP Integration for ggen
ggen-a2a-mcp = { path = "crates/ggen-a2a-mcp", version = "0.1.0" }

# A2A Registry: Multi-agent orchestration registry
ggen-a2a-registry = { path = "crates/ggen-a2a-registry", version = "0.1.0" }

ggen-transport = { path = "crates/ggen-transport", version = "6.0.1" }

# TAI Testing: Production hardening & resilience testing framework
# TPS (Toyota Production System) Kaizen implementation (continuous improvement)
# ggen-craftplan: RDF-driven Elixir code generation
ggen-craftplan = { path = "crates/ggen-craftplan", version = "0.1.0" }

# ggen-codegen: Generic code generation framework (trait-based, zero-cost abstractions)
ggen-codegen = { path = "crates/ggen-codegen", version = "0.1.0" }

# ggen-yawl: YAWL workflow generation from industry ontologies
ggen-yawl = { path = "crates/ggen-yawl", version = "0.1.0" }

# ggen-process-mining: Process mining integration with rust4pm (Alpha++, XES/OCEL)
ggen-process-mining = { path = "crates/ggen-process-mining", version = "0.1.0" }

# TAI Cache: Advanced caching with multi-tier strategies
# TAI gRPC: Service-to-service communication with advanced resilience patterns
# TAI Security: Vault, KMS, mTLS, secret rotation, encryption
# TAI Observability: Cloud Profiler, Trace, Monitoring
# TAI Kubernetes: Deployment, KEDA autoscaling, Istio traffic management
# OpenTelemetry dependencies (make optional at crate level, not workspace level)
opentelemetry = { version = "0.31" }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
tracing-opentelemetry = { version = "0.32" }

# CLI Enhancement libraries
indicatif = "0.18"
console = "0.16"

# Testing libraries
proptest = "1.8"
chicago-tdd-tools = "1.4.0"
fake = "2.9"

# AI integration
genai = "0.5"

# Force base64 version to resolve duplicate dependency issue
# config -> ron -> base64 0.21.7 conflicts with reqwest -> base64 0.22.1
base64 = "0.22"

# ===================================================================
# DEPENDENCY DEDUPLICATION (Phase 1 - Critical)
# Added 2026-01-24 to fix 160 duplicate versions
# Target: Reduce build time from >600s to <400s (33% improvement)
# Reference: examples/factory-paas/DEPENDENCY_DEDUPLICATION_PLAN.md
# ===================================================================

# Web frameworks (Critical - highest transitive impact)
# axum: 3 versions → 1 (reduces ~50-80 transitive dependencies)
# tonic: 2 versions → 1 (reduces ~30-50 transitive dependencies)
axum = "0.8"
axum-core = "0.5"
tonic = "0.14"

# Proc-macros (High impact - compilation time reduction)
# derive_more: 3 versions → 1 (v0.99, v1.0, v2.1 consolidated)
# darling ecosystem: 2 versions → 1 (v0.20, v0.21 consolidated)
derive_more = "1.0"
darling = "0.21"
darling_core = "0.21"
darling_macro = "0.21"

# Utilities (Moderate impact - direct dependencies)
# dashmap: 2 versions → 1 (v5.5, v6.1 consolidated)
# bitflags: 3 versions → 1 (consolidated)
# config: 2 versions → 1 (consolidated, default-features=false to allow customization)
# convert_case: 2 versions → 1 (consolidated)
dashmap = "6.1"
bitflags = "2.10"
config = { version = "0.15", default-features = false }
convert_case = "0.10"

# SQLite version patch - resolve conflict between a2a-rs (0.8) and ggen-api (0.7)
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "chrono", "uuid"] }

# Maximized linting configuration (Rust 1.78+)
# **Poka-Yoke Design**: Warnings are treated as errors to prevent defects at compile time.
# Type-first thinking: Compiler enforces correctness. If it compiles, invariants are enforced.
# Prevention is better than detection - catch issues at compile time, not runtime.
# Note: Individual lint configuration is done via attributes in code
# This section sets global lint levels
[workspace.lints.rust]
warnings = "deny"  # Poka-Yoke: Prevent warnings at compile time
unsafe_code = "deny"
missing_docs = "warn"  # Documentation warnings are less critical than code quality
dead_code = "allow"
unused_variables = "allow"

[workspace.lints.clippy]
# **Poka-Yoke Design**: Deny warnings to prevent defects at compile time.
# Type-first thinking: Use compiler as design tool to enforce correctness.
# Prevention is better than detection - catch issues at compile time, not runtime.
# Set lint groups to deny level for poka-yoke error prevention
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

# Deny critical lints for Poka-Yoke (error prevention)
# These have higher priority (0) and will override the groups
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"

# Allow multiple crate versions due to complex dependency tree
multiple_crate_versions = "allow"

# Allow cargo metadata lints for internal workspace crates
# Internal crates don't need full publish-ready metadata
cargo_common_metadata = "allow"

# Allow redundant feature names (e.g., "use-a2a-rs" prefix is intentional)
redundant_feature_names = "allow"

# Allow noisy pedantic lints that generate hundreds of false positives
# These are useful ideals but impractical to enforce across 30+ crates
must_use_candidate = "allow"
missing_const_for_fn = "allow"
module_name_repetitions = "allow"
struct_field_names = "allow"
similar_names = "allow"
too_many_lines = "allow"
type_repetition_in_bounds = "allow"
new_without_default = "allow"
useless_format = "allow"
useless_vec = "allow"
redundant_closure = "allow"
or_fun_call = "allow"
manual_strip = "allow"
map_unwrap_or = "allow"
cloned_instead_of_copied = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_lazy_continuation = "allow"
doc_link_with_quotes = "allow"
unneeded_field_pattern = "allow"
collapsible_if = "allow"
explicit_write = "allow"
checked_conversions = "allow"
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
format_push_string = "allow"
self_named_constructors = "allow"
needless_return = "allow"
derivable_impls = "allow"
manual_range_contains = "allow"
manual_let_else = "allow"
iter_without_into_iter = "allow"
if_then_some_else_none = "allow"
unused_self = "allow"
redundant_field_names = "allow"
assigning_clones = "allow"
manual_is_multiple_of = "allow"
manual_clamp = "allow"
single_match_else = "allow"
implicit_clone = "allow"
inline_always = "allow"
match_bool = "allow"
match_same_arms = "allow"
redundant_pattern = "allow"
redundant_else = "allow"
string_add = "allow"
string_add_assign = "allow"
bool_to_int_with_if = "allow"
box_collection = "allow"
clone_on_copy = "allow"
# Additional pedantic lints that are noisy across 30+ crates
unnecessary_to_owned = "allow"
map_identity = "allow"
option_map_or_none = "allow"
useless_asref = "allow"
unnecessary_lazy_evaluations = "allow"
wildcard_imports = "allow"
unsafe_derive_deserialize = "allow"
default_trait_access = "allow"
filter_map_next = "allow"
needless_continue = "allow"
needless_pass_by_value = "allow"
ptr_arg = "allow"
trivially_copy_pass_by_ref = "allow"
semicolon_if_nothing_returned = "allow"
uninlined_format_args = "allow"
unreadable_literal = "allow"
let_and_return = "allow"
needless_question_mark = "allow"
redundant_pub_crate = "allow"
single_component_path_imports = "allow"
shadow_unrelated = "allow"
blocks_in_conditions = "allow"
float_cmp = "allow"
match_wild_err_arm = "allow"
indexing_slicing = "allow"
string_lit_as_bytes = "allow"
fn_params_excessive_bools = "allow"
from_over_into = "allow"
get_first = "allow"
if_not_else = "allow"
items_after_statements = "allow"
mixed_read_write_in_expression = "allow"
multiple_inherent_impl = "allow"
naive_bytecount = "allow"
needless_borrow = "allow"
needless_borrows_for_generic_args = "allow"
needless_doctest_main = "allow"
needless_range_loop = "allow"
needless_update = "allow"
neg_multiply = "allow"
option_option = "allow"
pattern_type_mismatch = "allow"
print_literal = "allow"
print_with_newline = "allow"
recursive_format_impl = "allow"
ref_option_ref = "allow"
same_item_push = "allow"
stable_sort_primitive = "allow"
try_err = "allow"
tuple_array_conversions = "allow"
type_complexity = "allow"
unit_arg = "allow"
unnecessary_cast = "allow"
unnecessary_filter_map = "allow"
unnecessary_fold = "allow"
unnecessary_join = "allow"
unnecessary_mut_passed = "allow"
unnecessary_operation = "allow"
unnecessary_sort_by = "allow"
unnecessary_wraps = "allow"
unused_async = "allow"
unused_unit = "allow"
upper_case_acronyms = "allow"
vec_init_then_push = "allow"
wildcard_enum_match_arm = "allow"
zero_sized_map_values = "allow"
empty_enum_variants_with_brackets = "allow"
enum_glob_use = "allow"
equatable_if_let = "allow"
explicit_auto_deref = "allow"
flat_map_option = "allow"
format_in_format_args = "allow"
from_iter_instead_of_collect = "allow"
implied_bounds_in_impls = "allow"
inconsistent_struct_constructor = "allow"
invalid_upcast_comparisons = "allow"
iter_not_returning_iterator = "allow"
large_digit_groups = "allow"
large_futures = "allow"
large_stack_arrays = "allow"
large_types_passed_by_value = "allow"
let_underscore_untyped = "allow"
linkedlist = "allow"
lossy_float_literal = "allow"
manual_assert = "allow"
manual_bits = "allow"
manual_instant_elapsed = "allow"
manual_is_ascii_check = "allow"
manual_ok_or = "allow"
manual_rem_euclid = "allow"
manual_rotate = "allow"
manual_saturating_arithmetic = "allow"
manual_string_new = "allow"
many_single_char_names = "allow"
map_err_ignore = "allow"
map_flatten = "allow"
mem_forget = "allow"
min_ident_chars = "allow"
missing_fields_in_debug = "allow"
missing_trait_methods = "allow"
mixed_case_hex_literals = "allow"
module_inception = "allow"
mutex_atomic = "allow"
non_send_fields_in_send_ty = "allow"
nonstandard_macro_braces = "allow"
only_used_in_recursion = "allow"
panic_in_result_fn = "allow"
path_buf_push_overwrite = "allow"
precedence = "allow"
ptr_as_ptr = "allow"
pub_underscore_fields = "allow"
question_mark_used = "allow"
range_minus_one = "allow"
range_plus_one = "allow"
rc_buffer = "allow"
redundant_clone = "allow"
redundant_closure_for_method_calls = "allow"
redundant_locals = "allow"
redundant_slicing = "allow"
ref_binding_to_reference = "allow"
rest_pat_in_fully_bound_structs = "allow"
return_and_then = "allow"
same_name_method = "allow"
seek_from_current = "allow"
separated_literal_suffix = "allow"
should_implement_trait = "allow"
suspicious_operation_groupings = "allow"
suspicious_to_owned = "allow"
suspicious_xor_used_as_pow = "allow"
tests_outside_test_module = "allow"
trailing_empty_array = "allow"
trait_duplication_in_bounds = "allow"
undocumented_unsafe_blocks = "allow"
unneeded_wildcard_pattern = "allow"
unnecessary_box_returns = "allow"
unnecessary_self_imports = "allow"
unnecessary_struct_initialization = "allow"
unused_peekable = "allow"
unused_rounding = "allow"
unwrap_in_result = "allow"
while_let_on_iterator = "allow"
wrong_self_convention = "allow"
write_literal = "allow"
zombie_processes = "allow"

# renamed to needless_borrow (already allowed)

# Additional allows for noisy pedantic/nursery lints
field_reassign_with_default = "allow"
get_unwrap = "allow"
manual_filter = "allow"
manual_find_map = "allow"
vec_box = "allow"
manual_next_back = "allow"
empty_line_after_doc_comments = "allow"
doc_markdown = "allow"
return_self_not_must_use = "allow"
double_must_use = "allow"
test_attr_in_doctest = "allow"
inherent_to_string = "allow"
unwrap_or_default = "allow"
use_self = "allow"
len_zero = "allow"
significant_drop_tightening = "allow"
double_ended_iterator_last = "allow"
iter_cloned_collect = "allow"
map_entry = "allow"
manual_contains = "allow"
manual_inspect = "allow"
map_clone = "allow"
unnecessary_map_or = "allow"
case_sensitive_file_extension_comparisons = "allow"
collection_is_never_read = "allow"
borrowed_box = "allow"
bool_comparison = "allow"
manual_abs_diff = "allow"
option_if_let_else = "allow"
unnecessary_literal_bound = "allow"
needless_for_each = "allow"
explicit_iter_loop = "allow"

# ===================================================================
# PROC-MACRO DUPLICATION ANALYSIS (Updated 2026-01-24)
# ===================================================================
# After updating genai to 0.5 and centralizing in workspace.dependencies:
#
# derive_more duplicates (3 versions):
#   - v2.1.1: genai (production) - unavoidable, genai's choice
#   - v1.0.0: value-ext ← genai (production, transitive) - unavoidable
#   - v0.99.20: cucumber (dev-only) - ACCEPTABLE
#
# darling duplicates (2 versions):
#   - v0.21.3: serde_with_macros ← genai (production, transitive)
#   - v0.20.11: dummy ← fake ← chicago-tdd-tools (dev-only) - ACCEPTABLE
#
# Impact: 2 production proc-macro duplicates from genai's inconsistent dep tree
# These are unavoidable without forking genai or value-ext.
# Dev-only duplicates (cucumber, chicago-tdd-tools) are acceptable.
# ===================================================================
[features]
default = []
nightly = ["ggen-utils/nightly"]
termlog = ["ggen-utils/termlog"]
journald = ["ggen-utils/journald"]
syslog = ["ggen-utils/syslog"]
london_tdd = []
integration = []  # Enable workspace-level integration tests (requires external services/missing crates)
# OpenTelemetry instrumentation (optional - adds ~200 dependencies)
# Enable with: cargo build --features otel
# Only forward to ggen-core, which handles its own otel dependencies
otel = [
  "ggen-core/otel",
]
[dependencies]
ggen-utils = { path = "crates/ggen-utils", version = "0.2.0" }
ggen-cli-lib = { path = "crates/ggen-cli", version = "0.2.0" }
ggen-core = { path = "crates/ggen-core", version = "0.2.0" }
ggen-ai = { path = "crates/ggen-ai", version = "0.2.0" }
ggen-a2a-mcp = { path = "crates/ggen-a2a-mcp", version = "0.1.0", optional = true }
chrono = { workspace = true }
human-panic = "2.0.3"
better-panic = "0.3.0"
log = "0.4.28"
env_logger = "0.11"
tokio = { version = "1.47", features = ["full"] }
anyhow = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3.23"
tera = "1.20"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.18", features = ["v4"] }
genai = { workspace = true }
tracing-subscriber = "0.3"
# Note: OpenTelemetry dependencies are optional at the crate level (ggen-core, etc.)
# The root package doesn't directly use OTEL, so these are not included here.
# Enable OTEL via: cargo build --features otel (which forwards to ggen-core/otel)
# Example definitions removed - examples now discovered automatically by Cargo
[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
serde_json = "1.0"
tempfile = "3.23"
anyhow = "1.0"
ggen-domain = { path = "crates/ggen-domain" }
ggen-yawl = { path = "crates/ggen-yawl", version = "0.1.0" }
oxigraph = { version = "0.5.6", features = ["rdf-12"] }
# BDD testing framework
cucumber = "0.20"
assert_fs = "1.1"
mockito = "1.7"
insta = "1.43"
serial_test = "3.2"
md5 = "0.8"
shell-words = "1.1"
# E2E test dependencies
toml = "0.9"
reqwest = { version = "0.12", features = ["blocking", "json"] }
genai = { workspace = true }
proptest.workspace = true
# chicago-tdd-tools = { workspace = true, features = ["testcontainers"] }
# Note: chicago-tdd-tools commented for cross-platform compatibility
# Cleanroom integration for CLI testing
clnrm = "0.1.0"
testcontainers = "0.25"
testcontainers-modules = "0.13"
rand = "0.8"
mockall = "0.13"
fake = "2.9"
futures.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chicago-tdd-tools = { version = "1.4.0", features = ["testing-extras", "testcontainers"] }
# Performance benchmarking
criterion = { version = "0.7", features = ["html_reports"] }
once_cell = "1.20"
lazy_static = "1.4"
fastrand = "2.3"
# Process Mining for workflow analytics
process_mining = "0.2"
ggen-process-mining = { path = "crates/ggen-process-mining", version = "0.1.0" }
# Cryptographic hashing for receipt tests
sha2 = "0.10"
# A2A/TPS System Benchmarks
ggen-a2a.workspace = true
regex = "1.12"
validator = "0.19"
ed25519-dalek = "2.1"
[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 256          # More parallel compilation units = faster builds
incremental = true           # Enable incremental compilation
split-debuginfo = "unpacked" # Faster debug builds on macOS
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = "thin"             # Thin LTO for faster builds, still optimized
debug-assertions = false
codegen-units = 16       # Balance between speed and optimization
strip = true             # Strip symbols for smaller binaries
[profile.test]
opt-level = 0           # Faster test compilation
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 256     # More parallel compilation
incremental = true      # Enable incremental for tests
[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
[[bench]]
name = "runtime_overhead"
harness = false
[[bench]]
name = "async_runtime_benchmarks"
harness = false
[[bench]]
name = "memory_profiling"
harness = false
[[bench]]
name = "quick_runtime_validation"
harness = false
[[bench]]
name = "conventions_performance"
harness = false
[[bench]]
name = "pipeline_performance"
harness = false
[[bench]]
name = "cli_startup_performance"
harness = false
[[bench]]
name = "mcp_a2a_benchmarks"
harness = false
[[bench]]
name = "slo_validation"
harness = false
[[bench]]
name = "yawl_generation_slo"
harness = false
[[bench]]
name = "receipt_bench"
harness = false
[[bench]]
name = "a2a_bench"
harness = false
[[bench]]
name = "canonical_bench"
harness = false
[[test]]
name = "full_cycle_container_validation"
path = "tests/integration/full_cycle_container_validation.rs"
required-features = ["integration"]
[[test]]
name = "nextjs_ontology_sync"
path = "tests/integration/nextjs_ontology_sync.rs"
required-features = ["integration"]
[[test]]
name = "lifecycle_tests"
path = "tests/integration/lifecycle_tests.rs"
required-features = ["integration"]
[[test]]
name = "code_generation_tests"
path = "tests/integration/code_generation_tests.rs"
required-features = ["integration"]
[[test]]
name = "cache_tests"
path = "tests/integration/cache_tests.rs"
required-features = ["integration"]
[[test]]
name = "package_scoring_tests"
path = "tests/integration/package_scoring_tests.rs"
required-features = ["integration"]
[[test]]
name = "lifecycle_simple_tests"
path = "tests/integration/lifecycle_simple_tests.rs"
required-features = ["integration"]
[[test]]
name = "config_integration_test"
path = "tests/integration/config/config_integration_test.rs"
required-features = ["integration"]
[[test]]
name = "config_performance_tests"
path = "tests/integration/config/performance_tests.rs"
required-features = ["integration"]
[[test]]
name = "gemba_walk_verification"
path = "tests/integration/gemba_walk_verification.rs"
required-features = ["integration"]
[[test]]
name = "fmea_risk_assessment"
path = "tests/integration/fmea_risk_assessment.rs"
required-features = ["integration"]
[[test]]
name = "poka_yoke_patterns"
path = "tests/integration/poka_yoke_patterns.rs"
required-features = ["integration"]
[[test]]
name = "ontology_workflows_hipaa"
path = "tests/integration/ontology_workflows_hipaa.rs"
required-features = ["integration"]
[[test]]
name = "ontology_workflows_multi_cloud"
path = "tests/integration/ontology_workflows_multi_cloud.rs"
required-features = ["integration"]
[[test]]
name = "ontology_workflows_guard_evaluation"
path = "tests/integration/ontology_workflows_guard_evaluation.rs"
required-features = ["integration"]
[[test]]
name = "ontology_workflows_receipts"
path = "tests/integration/ontology_workflows_receipts.rs"
required-features = ["integration"]
[[test]]
name = "ontology_workflows_e2e"
path = "tests/integration/ontology_workflows_e2e.rs"
required-features = ["integration"]
[[test]]
name = "full_workflow_scenarios"
path = "tests/integration/full_workflow_scenarios.rs"
required-features = ["integration"]
# Security integration tests
[[test]]
name = "security_tests"
path = "tests/security/mod.rs"
required-features = ["integration"]
# TPS Integration Tests
[[test]]
name = "registry_client_tests"
path = "tests/transport/registry_client_tests.rs"
required-features = ["integration"]
# YAWL Workflow Generation Unit Tests
[[test]]
name = "yawl_workflow_generation_unit"
path = "tests/yawl_workflow_generation/unit/mod.rs"
required-features = ["integration"]
# YAWL Workflow Generation Receipt Verification Tests
[[test]]
name = "yawl_workflow_generation_receipts"
path = "tests/yawl_workflow_generation/receipts/mod.rs"
required-features = ["integration"]
# FIBO Integration Tests for YAWL Workflow Generation
[[test]]
name = "fibo_integration_tests"
path = "tests/fibo_integration_tests.rs"
required-features = ["integration"]
# Process Mining Integration Tests
[[test]]
name = "process_mining_integration"
path = "tests/process_mining/mod.rs"
required-features = ["integration"]
[[test]]
name = "workflow_tests"
path = "tests/workflow_tests.rs"
required-features = ["integration"]
[[test]]
name = "chaos_integration"
path = "tests/chaos_integration.rs"
required-features = ["integration"]
[[test]]
name = "tool_discovery_integration_tests"
path = "tests/tool_discovery_integration_tests.rs"
required-features = ["integration"]
[[test]]
name = "a2a_rig_mcp_integration"
path = "tests/a2a_rig_mcp_integration.rs"
required-features = ["integration"]
[[test]]
name = "a2a_integration_tests"
path = "tests/a2a_integration_tests.rs"
required-features = ["integration"]
[[test]]
name = "ontology_systems_tests"
path = "tests/ontology_systems_tests.rs"
required-features = ["integration"]
[[test]]
name = "factory_paas_runner"
path = "tests/factory_paas_runner.rs"
required-features = ["integration"]
# ============================================================================
# DEBIAN PACKAGING (cargo-deb)
# ============================================================================
# Enables: dpkg-deb, apt installation
# Build: cargo deb
# Install: sudo dpkg -i target/debian/ggen_0.2.0_amd64.deb
# Or: sudo apt install ./ggen_0.2.0_amd64.deb
[package.metadata.deb]
maintainer = "Sean Chatman <sean@chatmangpt.com>"
copyright = "2026, Sean Chatman <sean@chatmangpt.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
ggen is a language-agnostic, deterministic code generation tool that transforms \
RDF ontologies into reproducible code through SPARQL queries and Tera templates. \
Perfect for generating REST APIs, microservices, database schemas, infrastructure-as-code, \
and multi-language projects from a single specification."""
assets = [
    ["target/release/ggen", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/ggen/", "644"],
    ["LICENSE", "usr/share/doc/ggen/copyright", "644"],
]
changelog = "debian/changelog"
systemd-units = []
conffiles = []
[package.metadata.deb.variants.amd64]
package = "ggen-amd64"
[package.metadata.deb.lintian-overrides]
unused-shlibs = []
