[package]
name = "ggen"
version = "2.2.0"
authors = ["Sean Chatman <sean@chatmangpt.com>"]
edition = "2021"
repository = "https://github.com/seanchatmangpt/ggen"
readme = "README.md"
license = "MIT"
keywords = ["cli", "code-generation", "rdf", "templates"]
homepage = "https://github.com/seanchatmangpt/ggen"
categories = ["development-tools", "command-line-utilities"]
description = """
ggen is a deterministic, language-agnostic code generation framework that treats software artifacts as projections of knowledge graphs.
"""

[workspace]
members = [
  "utils",
  "cli",
  "domain",
  "ggen-core",
  "ggen-ai",
  "ggen-marketplace",
  "examples/frontmatter-cli",
  "examples/natural-market-search",
  "examples/ai-template-project",
  "node",
]
exclude = ["examples/rust-cli-lifecycle", "examples/marketplace-demo/generated"]
resolver = "2" # Use new resolver for better dependency resolution

# Workspace-wide dependencies for version consistency
[workspace.dependencies]
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "json",
  "ansi",
] }
clap = { version = "4.5", features = ["derive"] }
clap-noun-verb = "3.0.0"
clap-noun-verb-macros = "3.0.0"
once_cell = "1.19"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tempfile = "3.23"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
futures-util = "0.3"
uuid = { version = "1.18", features = ["v4", "serde"] }
tera = "1.20"
oxigraph = "0.5.1"
toml = "0.9"
serde_yaml = "0.9"
regex = "1.12"
rayon = "1.11"

# OpenTelemetry dependencies
opentelemetry = "0.21"
opentelemetry-otlp = "0.14"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
tracing-opentelemetry = "0.22"

# CLI Enhancement libraries
indicatif = "0.18"
console = "0.16"

# Testing libraries
proptest = "1.8"

# Force base64 version to resolve duplicate dependency issue
# config -> ron -> base64 0.21.7 conflicts with reqwest -> base64 0.22.1
base64 = "0.22"

# Patch removed - was causing conflicts with same source

# Allow multiple crate versions due to complex dependency tree
# Enforce error handling best practices - no unwrap/expect in production code
[workspace.lints.clippy]
multiple_crate_versions = "allow"
# Deny unwrap/expect to enforce proper error handling
# Note: Tests are allowed to use unwrap/expect for clarity
unwrap_used = "warn"
expect_used = "warn"

[features]
nightly = ["ggen-utils/nightly"]
termlog = ["ggen-utils/termlog"]
journald = ["ggen-utils/journald"]
syslog = ["ggen-utils/syslog"]
london_tdd = []

[dependencies]
ggen-utils = { path = "utils", version = "2.2.0" }
ggen-cli-lib = { path = "cli", version = "2.2.0" }
ggen-core = { path = "ggen-core", version = "2.2.0" }
ggen-ai = { path = "ggen-ai", version = "2.2.0" }
human-panic = "2.0.3"
better-panic = "0.3.0"
log = "0.4.28"
env_logger = "0.11"
tokio = { version = "1.47", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.5", features = ["derive"] }
tempfile = "3.23"
tera = "1.20"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.18", features = ["v4"] }
genai = "0.4"
tracing-subscriber = "0.3"

# Example definitions removed - examples now discovered automatically by Cargo

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
serde_json = "1.0"
tempfile = "3.23"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
# BDD testing framework
cucumber = { version = "0.21", features = ["macros"] }
assert_fs = "1.1"
mockito = "1.7"
insta = "1.43"
serial_test = "3.2"
md5 = "0.8"
shell-words = "1.1"
# E2E test dependencies
toml = "0.9"
reqwest = { version = "0.12", features = ["blocking", "json"] }
genai = "0.4"
proptest.workspace = true
# Cleanroom integration for CLI testing
clnrm = "0.1.0"
mockall = "0.13"
fake = "2.9"
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
# Performance benchmarking
criterion = { version = "0.7", features = ["html_reports"] }
once_cell = "1.20"
lazy_static = "1.4"
fastrand = "2.3"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 256          # More parallel compilation units = faster builds
incremental = true           # Enable incremental compilation
split-debuginfo = "unpacked" # Faster debug builds on macOS

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = "thin"             # Thin LTO for faster builds, still optimized
debug-assertions = false
codegen-units = 16       # Balance between speed and optimization
strip = true             # Strip symbols for smaller binaries

[profile.test]
opt-level = 0           # Faster test compilation
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 256     # More parallel compilation
incremental = true      # Enable incremental for tests

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[[bench]]
name = "runtime_overhead"
harness = false

[[bench]]
name = "async_runtime_benchmarks"
harness = false

[[bench]]
name = "memory_profiling"
harness = false

[[bench]]
name = "quick_runtime_validation"
harness = false

[[bench]]
name = "conventions_performance"
harness = false

[[bench]]
name = "marketplace_performance"
harness = false
